syntax = "proto3";

package autd3;

import "utils.proto";

message TxRawData {
  bytes data = 1;
  uint32 n = 2;
}
message SendResponse {}
message RxMessage { bytes data = 1; }
message ReadRequest {}

message CloseRequest {}
message CloseResponse {}

message GeometryResponse {}

service Simulator {
  rpc ConfigGeometry(Geometry) returns (GeometryResponse) {}
  rpc UpdateGeometry(Geometry) returns (GeometryResponse) {}
  rpc SendData(TxRawData) returns (SendResponse) {}
  rpc ReadData(ReadRequest) returns (RxMessage) {}
  rpc Close(CloseRequest) returns (CloseResponse) {}
}

service ECAT {
  rpc SendData(TxRawData) returns (SendResponse) {}
  rpc ReadData(ReadRequest) returns (RxMessage) {}
  rpc Close(CloseRequest) returns (CloseResponse) {}
}
