syntax = "proto3";

package autd3;

message Angle {
  float rad = 1;
}

message UnitVector3 {
  float x = 1;
  float y = 2;
  float z = 3;
}

message Point3 {
  float x = 1;
  float y = 2;
  float z = 3;
}

message Quaternion {
  float w = 1;
  float x = 2;
  float y = 3;
  float z = 4;
}

message Geometry {
  message AUTD3 {
    Point3 pos = 1;
    Quaternion rot = 2;
    float sound_speed = 3;
  }
  repeated AUTD3 devices = 1;
}
